[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Settings/PlayerInfo.gd" type="Script" id=1]
[ext_resource path="res://art/MainMenu/background_plain.png" type="Texture" id=2]
[ext_resource path="res://scripts/PlayerSelection/ScrollContainer.gd" type="Script" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/PlayerSelection/Back.png" type="Texture" id=5]
[ext_resource path="res://art/PlayerSelection/Selected.png" type="Texture" id=6]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 3 )
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 4 )

[node name="PlayerInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -180.141
margin_top = -157.876
margin_right = 193.859
margin_bottom = 509.124
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 80.0
margin_right = -10.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
margin_right = 356.0
margin_bottom = 587.0
theme = SubResource( 6 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
margin_right = 356.0
margin_bottom = 587.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="."]
anchor_top = 0.02
anchor_right = 1.0
anchor_bottom = 0.1
margin_left = 20.0
custom_fonts/font = SubResource( 7 )
text = "Select Player"
align = 1
valign = 1

[node name="Back" type="Button" parent="."]
margin_left = 6.0
margin_top = 7.0
margin_right = 104.0
margin_bottom = 96.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="btnTick" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -78.0
margin_top = 7.0
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="TouchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="scroll_ended" from="MarginContainer/ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="scroll_started" from="MarginContainer/ScrollContainer" to="." method="_on_ScrollContainer_scroll_started"]
[connection signal="button_down" from="Back" to="." method="_on_Back_button_down"]
[connection signal="button_up" from="Back" to="." method="_on_Back_button_up"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
